Add about text and new picture

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,8 @@
     
 <div class="main-content">
     {{>header}}
-    <img class="kids-pic" src="/img/family.jpeg" alt="">
+    <p>This site was create by Hugh Clarke. It uses data from mapbox.com and darksky.net!</p>
+    <img class="kids-pic" src="/img/Arnica.png" alt="">
         
 
 </div>
